--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,20 @@
 .column {
-  background-color:  #4285F4;
+  background-color: #4285F4;
   display: inline-block;
-  margin: -.13rem;
+  display: -webkit-flex;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1;
 }
 
 .dot {
-  height: 2rem;
-  width: 2rem;
+  height: 4rem;
+  width: 4rem;
   margin: 0.5rem;
   background-color: white;
   background-size: 100% auto;
+  border-width: 0.25rem;
   border-radius: 50%;
   border-color: white;
   border-style: solid;
@@ -31,6 +36,28 @@
   background-color: #FF9900;
 }
 
-.dot.off {
-  background-color: transparent;
+.dot.blue {
+  background-color:  #4285F4;
+}
+
+.hide {
+  display: none;
+}
+
+section.board {
+  display: -webkit-flex;
+  display: flex;
+}
+
+.modal {
+  max-height: calc(100% - 100px);
+  position: fixed;
+    top: 25%;
+    left: 50%;
+  transform: translate(-50%, -50%);
+  padding: .5em;
+  min-height: 5rem;
+  border-radius: 8px;
+  border: 4px double black;
+  background-color:  #4285F4;
 }
