--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,7 @@
 section.board {
   display: -webkit-flex;
   display: flex;
+  max-width: 1000px;
 }
 
 .modal {
@@ -57,7 +58,12 @@ section.board {
   transform: translate(-50%, -50%);
   padding: .5em;
   min-height: 5rem;
+  min-width: 12rem;
   border-radius: 8px;
   border: 4px double black;
   background-color:  #4285F4;
+}
+
+input[type='number']{
+  width: 2em;
 }
