--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,11 @@ section.board {
   background-color:  #4285F4;
 }
 
+#start {
+  display: block;
+  margin: auto;
+}
+
 input[type='number']{
   width: 2em;
 }
